syntax = "proto3";

package semio.extender.adapter.transformer.v1;

option go_package = "github.com/usalu/semio/src/packages/go/extender/adapter/transformer/v1";
option csharp_namespace = "Semio.Extender.Adapter.Transformer.V1";

import "model/v1/model.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

// ➡️ Transformer (trf/T) service is computating transformation scripts.
service TransformerService {
  // Transform a layout from a transformation script.
  rpc Transform(TransformationRequest) returns (semio.model.v1.Layout){
    option (google.api.http) = {
      post: "/v1/transform"
      body: "*"
    };
  }
}

message TransformationRequest{
  semio.model.v1.Layout lyt = 1;
}